2003-05-16  John Levon  <levon@movementarian.org>

	* pp/opannotate.cpp: small renaming

2003-05-16  John Levon  <levon@movementarian.org>

	* libpp/format_output.h:
	* libpp/format_output.cpp: don't demangle and
	basename() here.

	* libpp/profile_container.h:
	* libpp/profile_container.cpp: return copied symbols
	in a list from select_symbols()

	* libpp/symbol_container.cpp:
	* libpp/symbol_sort.cpp:
	* pp/opannotate.cpp:
	* pp/opgprof.cpp:
	* pp/opreport.cpp: changes from above

2003-05-15  John Levon  <levon@movementarian.org>

	* libpp/symbol_container.h:
	* libpp/symbol_container.cpp: add begin(), end(),
	remove symbols_by_count()

	* libpp/profile_container.cpp: use symbol container
	iterator directly in select_symbols()

2003-05-15  John Levon  <levon@movementarian.org>

	* libpp/format_output.h:
	* libpp/format_output.cpp:
	* libpp/profile_container.h:
	* libpp/profile_container.cpp:
	* libpp/symbol_container.h:
	* libpp/symbol_container.cpp:
	* libpp/symbol_sort.h:
	* libpp/symbol_sort.cpp:
	* pp/opannotate.cpp:
	* pp/opreport.cpp:
	* pp/opgprof.cpp: move symbol_collection typedef
	  into global namespace, and use consistently

2003-05-15  John Levon  <levon@movementarian.org>

	* libpp/format_output.h:
	* libpp/format_output.cpp: add vma_format_64bit(),
	remove bool parameter from output()

	* pp/opreport.cpp: change from above, refactor flags
	code into get_format_flags() helper

2003-05-12  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/format_output.h:
	* libpp/format_output.cpp:
	* libpp/symbol_sort.h:
	* libpp/symbol_sort.cpp: handle reverse sort in sorting not in output
	* pp/opannotate.cpp:
	* pp/opreport.cpp: update according

2003-05-12  Philippe Elie  <phil.el@wanadoo.fr>

	* libpp/symbol_sort.h:
	* libpp/symbol_sort.cpp: handle sort order as specified on command line

	* pp/opgprof.cpp: sort symbol is not neccessary for gprof
	* pp/opreport.cpp:
	* pp/opreport_options.cpp:
	* pp/opannotate.cpp: use new sort API
