@@ -108,7 +108,7 @@ public:
 	 * retrieve the linenr and so can return zero in linenr
 	 */
 	bool get_linenr(symbol_index_t sym_idx, uint offset,
-			std::string & filename, unsigned int & linenr) const;
+			std::string & filename, uint & linenr) const;
 
 	/**
 	 * @param sym_idx symbol index
