@@ -1,5 +1,15 @@
 2003-05-16  John Levon  <levon@movementarian.org>
 
+	* libutil++/op_bfd.cpp: make sure linenr is
+	always set to something
+
+	* libpp/opp_symbol.h: linenr should be unsigned
+
+	* libpp/profile_container.cpp: remove some unneeded
+	copies
+	
+2003-05-16  John Levon  <levon@movementarian.org>
+
 	* pp/opannotate.cpp: small renaming
 
 2003-05-16  John Levon  <levon@movementarian.org>
